syntax = "proto3";

package kubeit.v1beta1;

option go_package = "github.com/KubeITerator/KubeIT/pkg/grpc/api";

message StatusReport{
  string action = 1;
  string message = 2;
}

message IDRequest{
  string id = 1;
}

message Empty{}